# ir_sim_custom

./: pyproject.toml
irsim/env/: env_config.py
irsim/world/: object_base.py  object_factory.py
project_kobe_frateur/: Optimizations.md  README.md  a_star_custom.py  custom_map.yaml  custom_world.py  custom_world.yaml  metrics_logger.py  mission_logger.py  pyproject.toml  requirements.txt  simulation_gui.py
project_kobe_frateur/Experiment1/NOPLAN_UGVTwin_0_124021/: path.npy
project_kobe_frateur/custom_components/: changes_irsim.md
project_kobe_frateur/experiments/Experiment1/: Experiment1.txt  world_experiment1.py  world_experiment1.yaml
project_kobe_frateur/experiments/Experiment1/ASTAR_UGVTwin_0_125048/: path.npy
project_kobe_frateur/experiments/Experiment1/UGVTwin_0_AStar/: 0_run_specifications.json  0_timeseries.json  path.npy
project_kobe_frateur/experiments/Experiment2/: Experiment2.txt  world_experiment2.py  world_experiment2.yaml
project_kobe_frateur/local_controllers/: c3bf_qp.py  cbf_qp.py  local_planners.py
project_kobe_frateur/local_planners/: cbf_qp.py  local_planners.py
project_kobe_frateur/loggers/: metrics_logger.py  mission_logger.py
project_kobe_frateur/overarchingTwin/: grid_map.py  mission.py  mission_planner.py  overarching_twin.py  uav_fleet_dt.py
project_kobe_frateur/overarching_twin/: grid_map.py  mission.py  mission_planner.py  overarching_twin.py  uav_fleet_dt.py  ugv_fleet_dt.py
project_kobe_frateur/path_planners/: a_star_custom.py
project_kobe_frateur/world_generator/: gen_obstacles.py  my_env.yaml  obstacles.yaml
(+36 files in other folders)
